--- a/portfolio.html
+++ b/portfolio.html
@@ -1,13 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Portfolio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital@1&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="portfolio.css">
 </head>
+
 <body>
-    
+    <section class="top-banner">
+        <div class="half-width">
+            <h1>Welcome To</h1>
+            <h1><span class="color">Peter Parker</span> World </h1>
+            <h2>Bulld Climber and stopper</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.<br>
+                Ea molestias assumenda accusantium, sequi, dolore animi<br>
+                error reiciendis doloribus, eaque laborum recusandae<br>
+                repellat at repudiandae obcaecati itaque quae nesciunt<br>
+                ipsam excepturi.
+            </p>
+            <a class="link-button" target="blank" href="https://www.google.com/maps/@23.7746591,90.4030951,15z">HIRE ME</a>
+        </div>
+        <div class="half-width">
+            <img src="images/Background.png" alt="">
+        </div>
+    </section>
 </body>
+
 </html>
