--- a/portfolio.html
+++ b/portfolio.html
@@ -24,11 +24,29 @@
                 repellat at repudiandae obcaecati itaque quae nesciunt<br>
                 ipsam excepturi.
             </p>
-            <a class="link-button" target="blank" href="https://www.google.com/maps/@23.7746591,90.4030951,15z">HIRE ME</a>
+            <a class="link-button" target="blank" href="https://www.google.com/maps/@23.7746591,90.4030951,15z">HIRE
+                ME</a>
         </div>
         <div class="half-width">
             <img src="images/Background.png" alt="">
         </div>
+    </section>
+    <section class="dream-big">
+        <div class="half-width">
+            <img src="images/my-bg2.png" alt="">
+        </div>
+        <div class="half-width">
+            <h1>Dream Big</h1>
+            <h2>Become a web<span class="color"> developer </span></h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.<br>
+                Voluptate cupiditate assumenda natus impedit,<br>
+                labore unde nemo amet deserunt reiciendis temporibus<br>
+                officiis voluptatum debitis aliquam est rem tempora<br>
+                maiores iste facilis!
+            </p>
+            <a class="link-button" target="blank" href="">DOWNLOAD RESUME</a>
+        </div>
+
     </section>
 </body>
 
