--- a/portfolio.html
+++ b/portfolio.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <section class="top-banner">
+    <section class="top-banner flexible-container">
         <div class="half-width">
             <h1>Welcome To</h1>
             <h1><span class="color">Peter Parker</span> World </h1>
@@ -27,11 +27,11 @@
             <a class="link-button" target="blank" href="https://www.google.com/maps/@23.7746591,90.4030951,15z">HIRE
                 ME</a>
         </div>
-        <div class="half-width">
+        <div class="half-width flexible-container">
             <img src="images/Background.png" alt="">
         </div>
     </section>
-    <section class="dream-big">
+    <section class="dream-big flexible-container">
         <div class="half-width">
             <img src="images/my-bg2.png" alt="">
         </div>
@@ -47,6 +47,30 @@
             <a class="link-button" target="blank" href="">DOWNLOAD RESUME</a>
         </div>
 
+    </section>
+    <section class="experience-area">
+        <h1>Experiences</h1>
+        <div class="flexible-container">
+            <div class="experience-item">
+                <h1>Full Stack web<span class="color"> Developer </span></h1>
+                <h2 class="color h2">2022-Present | Pro Level Developer</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.<br>
+                    Voluptatibus, delectus? Architecto repellendus numquam,<br>
+                    excepturi accusamus expedita modi! Placeat eius incidunt inventore,<br>
+                    molestiae voluptate ex dolore itaque ipsam voluptas ipsum nesciunt?<br>
+                </p>
+            </div>
+            <div class="experience-item">
+                <h1>Baby web<span class="color"> Developer </span></h1>
+                <h2 class="color h2">2020-2021 | Programming Hero Learnr</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.<br>
+                    Doloremque sequi perspiciatis reiciendis accusantium.<br>
+                    Explicabo quae amet quasi, molestiae culpa sit libero<br>
+                    fuga fugiat autem, quaerat sapiente, neque eveniet? Nihil,<br>
+                    reiciendis.
+                </p>
+            </div>
+        </div>
     </section>
 </body>
 
