--- a/portfolio.html
+++ b/portfolio.html
@@ -51,7 +51,7 @@
     <section class="experience-area">
         <h1>Experiences</h1>
         <div class="flexible-container">
-            <div class="experience-item">
+            <div id="full stack" class="experience-item">
                 <h1>Full Stack web<span class="color"> Developer </span></h1>
                 <h2 class="color h2">2022-Present | Pro Level Developer</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.<br>
@@ -60,7 +60,7 @@
                     molestiae voluptate ex dolore itaque ipsam voluptas ipsum nesciunt?<br>
                 </p>
             </div>
-            <div class="experience-item">
+            <div id="baby-web" class="experience-item">
                 <h1>Baby web<span class="color"> Developer </span></h1>
                 <h2 class="color h2">2020-2021 | Programming Hero Learnr</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.<br>
@@ -72,6 +72,9 @@
             </div>
         </div>
     </section>
+    <footer>
+        <p>amar sonar bangla ami tumai valo basi</p>
+    </footer>
 </body>
 
 </html>
